--- a/feature/input/indexIP.html
+++ b/feature/input/indexIP.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleIP.css">
     <link rel="stylesheet" href="../../root.css">
+    <link rel="stylesheet" href="../setting_style.css">
     <title>Document</title>
 </head> 
 <body>
@@ -12,7 +13,7 @@
         <div class="header">
             <div class="navbar">
                 <div class="title"></div>
-                <img src="../../settingimg.png" width="50px" height="50px" class="setting" onclick="onclickSetting()">
+                <img src="../../settingimg.png" width="50px" height="50px" class="setting" onclick="onclickSetting('.container')">
                 <img src="../../goback_but.png" width="50px" height="40px" class="goBack-page">
             </div>
             <div class="form-action">
