update available vocab lists and more beautiful styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel='stylesheet' href="root.css">
 	<link rel='stylesheet' href="feature/setting_style.css">
-</head>
+</head> 
 <body>
 	<div class="navbar">
 		<div class="ctn-logo">
@@ -16,9 +16,8 @@
 		</div>
 		<ul>
 			<li><a href="./">Home</a></li>
-			<li><a>Tiến Độ</a></li>
+			<li><a href="./feature/nav/available_vocab/">Mẫu từ vựng</a></li>
 			<li><a>Phản Hồi</a></li>
-			<li><a>Mẫu từ vựng</a></li>
 		</ul>
 	</div>
 	<div class="container-twoButton">
