update 29/11: user interface and call api to backend

--- a/feature/input/indexIP.html
+++ b/feature/input/indexIP.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="../../root.css">
     <link rel="stylesheet" href="../setting_style.css">
     <title>Document</title>
-</head> 
+</head>  
 <body>
     <div class="container">
         <div class="header">
             <div class="navbar">
-                <div class="title"></div>
                 <img src="../../settingimg.png" width="50px" height="50px" class="setting" onclick="onclickSetting('.container')">
+                <h3 class="title"></h3>
                 <img src="../../goback_but.png" width="50px" height="40px" class="goBack-page">
+                
             </div>
             <div class="form-action">
                 <button class="actionBut button-addMore" onclick="addMoreBut()">More</button>
