--- a/feature/input/indexIP.html
+++ b/feature/input/indexIP.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styleIP.css">
     <link rel="stylesheet" href="../../root.css">
     <link rel="stylesheet" href="../setting_style.css">
-    <title>Document</title>
+    <title>PhiEnglish</title>
 </head>  
 <body>
     <div class="container">
@@ -18,15 +18,15 @@
                 
             </div>
             <div class="form-action">
-                <button class="actionBut button-addMore" onclick="addMoreBut()">More</button>
-                <button class="actionBut button-submit" onclick="submit()">Submit</button>
+                <button class="actionBut button-addMore" onclick="addMoreBut()">Thêm</button>
+                <button class="actionBut button-submit" onclick="submit()">Xong</button>
             </div>
         </div>
 
         <div class="container-body">
             <div class="container-input"></div>
             <br>
-            <button class="actionBut buttonMore-inend"  onclick="addMoreBut(event)">More</button>
+            <button class="actionBut buttonMore-inend"  onclick="addMoreBut(event)">Thêm</button>
         </div>
     </div>
     <div class="popup-ctn"></div>
