--- a/feature/menu/flashcard/indexfd.html
+++ b/feature/menu/flashcard/indexfd.html
@@ -18,6 +18,12 @@
 
         <div class="container-body">
             <div class="top-ctn">
+                <select class="select-voices">
+                    <option value="1">English 1</option>
+                    <option value="2">English 2</option>
+                    <option value="3">US Male</option>
+                    <option value="4">US Female</option>
+                </select>
                 <span class='cr-id-ques'></span>
                 <img src="../../../speakerItem.png" class="speaker">
             </div>
@@ -29,7 +35,7 @@
             <div class="end-ctn">
                 <button class="back-ques" onclick="preQues()">&#8592;</button>
                 <button class="next-ques" onclick="nextQues()">&#8594;</button>
-                 <img src="../../../transformLang.png" class="img-transLang">
+                 <!-- <img src="../../../transformLang.png" class="img-transLang"> -->
             </div>
             
         </div>
