--- a/feature/menu/mixStory/indexMS.html
+++ b/feature/menu/mixStory/indexMS.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleMS.css">
     <link rel="stylesheet" href="../../../root.css">
-    <title>Document</title>
+    <title>PhiEnglish</title>
 </head>
 <body>
     <div class="container">
@@ -19,28 +19,12 @@
         <div class="container-body">
             <div class="ctn-describe">
                 <div>
-                <span>Chủ đề</span>
-                <select name="describeStory" id="genre">
-                    <option value="random">Ngẫu nhiên</option>
-                    <option value="life_lesson">Bài học cuộc sống</option>
-                    <option value="self_development">Phát triển bản thân</option>
-                    <option value="comedy">Hài hước</option>
-                    <option value="detective">Trinh thám</option>
-                    <option value="love">Tình yêu tuổi học trò</option>
-                    <option value="son_tung_mtp">Sơn Tùng M-TP</option>
-                    <option value="drama">Drama</option>
-                    <option value="comforting in this situation, don't create a story, just an deep talk">An ủi / Lời chúc</option>
-                    <option value="badminton">Cầu lông</option>
-                    <option value="win_crush">Cách tán đổ crush</option>
-                </select>
-                </div>
-                <div>
                 <span>Mức độ</span>
-                <select name="emotional_level" id="emotional_level">
-                    <option value="normal">Bình thường</option>
-                    <option value="playful">Cợt nhả</option>
-                    <option value="sad">Buồn</option>
-                    <option value="serious">Nghiêm túc</option>
+                <select name="level" id="emotional_level">
+                    <option value="5-7">Bình thường</option>
+                    <option value="10-13">Khó</option>
+                    <option value="3-5">Dễ</option>
+                    <option value="15-20">Rất khó</option>
                 </select>
                 </div>
             </div> 
