--- a/feature/nav/feedback_page/indexFeedbackpage.html
+++ b/feature/nav/feedback_page/indexFeedbackpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styleFeedbackpage.css">
     <link rel="stylesheet" href="../../../navbar.css">
     <link rel="stylesheet" href="../../../root.css">
     <title>PhiEnglish</title>
@@ -16,18 +16,21 @@
 		</div>
 		<ul>
 			<li><a href="../../../">🏠 Home</a></li>
-			<li><a href="./">📘 Mẫu từ vựng</a></li>
-            <li><a href="../feedback_page/indexFeedbackpage.html">ℹ️ About</a></li>
+			<li><a href="../available_vocab/">📘 Mẫu từ vựng</a></li>
+            <li><a href="./indexFeedbackpage.html">ℹ️ About</a></li>
+
 		</ul>
-	</div> 
-    <div class="container">
-        <div class="block-list-vocab">
-            <div class="book ilearn10" onclick="click_block()">
-                <img src="https://img.loigiaihay.com/picture/2024/0122/ta10-ilearn.png">
-                <span>Bộ từ vựng trong Sách giáo khoa tiếng anh I learn smart world 10</span>
-            </div>
-        </div>
+	</div>
+   <div class="about-container">
+        <h3>About</h3>
+        <p>
+            Nếu bạn phát hiện bất kỳ lỗi nào gây khó chịu, hoặc có ý tưởng giúp cải thiện trang web, 
+            hãy liên hệ với tôi qua email:
+            <strong>trantenphi.1@gmail.com</strong>.
+            Tôi luôn sẵn lòng lắng nghe mọi góp ý của bạn!
+        </p>
     </div>
+
 
     <script src="script.js"></script>
 </body>
