Fix some bug, upadte favicon

--- a/feature/menu/WaL/indexWaL.html
+++ b/feature/menu/WaL/indexWaL.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styleWaL.css">
     <title>PhiEnglish</title>
     <link rel="stylesheet" href="../../../root.css">
-
+    <link rel="icon" href="../../../favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
