--- a/feature/menu/indexMn.html
+++ b/feature/menu/indexMn.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styleMn.css">
     <link rel="stylesheet" href="../../root.css">
     <link rel="stylesheet" href="../setting_style.css">
-    <title>Document</title>
+    <link rel="icon" href="../../favicon.png" type="image/x-icon">
+    <title>PhiEnglish</title>
 </head>
 <body>
     <div class="container">
