--- a/feature/nav/feedback_page/indexFeedbackpage.html
+++ b/feature/nav/feedback_page/indexFeedbackpage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styleFeedbackpage.css">
     <link rel="stylesheet" href="../../../navbar.css">
     <link rel="stylesheet" href="../../../root.css">
+    <link rel="icon" href="../../../favicon.png" type="image/x-icon">
     <title>PhiEnglish</title>
 </head>
 <body>
