--- a/feature/input/indexIP.html
+++ b/feature/input/indexIP.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styleIP.css">
     <link rel="stylesheet" href="../../root.css">
     <link rel="stylesheet" href="../setting_style.css">
+    <link rel="icon" href="../../favicon.png" type="image/x-icon">
     <title>PhiEnglish</title>
 </head>  
 <body>
