--- a/feature/menu/flashcard/indexfd.html
+++ b/feature/menu/flashcard/indexfd.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylefd.css">
     <link rel="stylesheet" href="../../../root.css">
-    <title>Document</title>
+    <link rel="icon" href="../../../favicon.png" type="image/x-icon">
+    <title>PhiEnglish</title>
 </head>
 <body>
     <div class="container">
