--- a/feature/menu/mixStory/indexMS.html
+++ b/feature/menu/mixStory/indexMS.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleMS.css">
     <link rel="stylesheet" href="../../../root.css">
+    <link rel="icon" href="../../../favicon.png" type="image/x-icon">
     <title>PhiEnglish</title>
 </head>
 <body>
