--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel='stylesheet' href="root.css">
 	<link rel='stylesheet' href="feature/setting_style.css">
 	<link rel="stylesheet" href="../../../navbar.css">
-
+	<link rel="icon" href="./favicon.png" type="image/x-icon">
 </head> 
 <body>
 	<div class="navbar">
